fixed doc generation (updated package.json npm run docs fn added channel labeleling - added overflow to controls small uimanager_spec update

--- a/css/test-main.css
+++ b/css/test-main.css
@@ -16,7 +16,16 @@
   height: 30px;
   width: 20%;
   display: inline-block;
-  background: #565656;;
+  background: #565656;
+  overflow: hidden;
+}
+
+.channel-label {
+  display: inline;
+  vertical-align: sub;
+  margin-left: 0.5em;
+  color: #FAFAFA;
+  font-size: 1em;
 }
 
 div[class^='seq-channel'] {
